# Blog_for_Data_Acquisition

./: _quarto.yml  index.qmd  main.py  pyproject.toml
docs/: index.html  search.json
